# EndorOS

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  x86_64-endoros.json
application/src/: lib.rs
application/src/ports/: auth.rs  encryption.rs  filesystem.rs  mod.rs  package_mgr.rs  process_mgr.rs
application/src/use_cases/: authenticate_user.rs  encrypt_volume.rs  install_package.rs  launch_process.rs  mod.rs  mount_filesystem.rs
domain/: Cargo.toml
domain/src/: file.rs  lib.rs  package.rs  policy.rs  process.rs  session.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/auth/: local_auth.rs
infrastructure/src/crypto/: aes_adapter.rs  mod.rs
infrastructure/src/fs/: ramdisk.rs
infrastructure/src/process/: scheduler.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  boot.rs  main.rs  panic.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/desktop/: app.rs  file_explorer.rs  main.rs  process_monitor.rs  taskbar.rs  terminal.rs  theme.rs  widgets.rs
ui/src/shell/: interpreter.rs  main.rs
ui/src/window_manager/: layout.rs  mod.rs  wm.rs
