[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
chrono = { version = "0.4", features = ["clock"] }

[[bin]]
name = "endoros-shell"
path = "src/shell/main.rs"

[[bin]]
name = "endoros-desktop"
path = "src/desktop/main.rs"
